# teams_status_monitor

./: README.md  teams-status.js
backend/: Dockerfile  go.mod  go.sum
backend/cmd/: main.go
backend/middlewares/: loggingMiddleware.go
backend/utils/: config.go  database.go  dataclass.go  healthz.go  logging.go  metrics.go
charts/: .gitignore
charts/teams-status-monitor/: Chart.yaml  values.yaml
charts/teams-status-monitor/config/: default.conf
charts/teams-status-monitor/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secrets.yaml  service.yaml  service_monitor.yaml  serviceaccount.yaml
client/: Cargo.toml
client/src/: main.rs
client/src/utils/: logging.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/components/: MeetingDuration.vue  MeetingStatus.vue  ProfileImage.vue  ProfileName.vue  ShortcutButton.vue
frontend/src/router/: index.js
frontend/src/views/: StatusView.vue
grafana/dashbaords/: teams-status-monitor.json
