[package]
name = "teams_meeting_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = "4.5.3"
futures = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.21"
reqwest = { version = "0.12.0", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "*"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "chrono"] }
url = "2.5.0"
